[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"

[[bin]]
name = "day-1"
path = "src/day1.rs"

[[bin]]
name = "day-2"
path = "src/day2.rs"

[[bin]]
name = "day-3"
path = "src/day3.rs"

[[bin]]
name = "day-4"
path = "src/day4.rs"

[[bin]]
name = "day-5"
path = "src/day5.rs"
